Nomenclature refactor and implemented the use case to delete an existent model
